// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Province can apply class to hide the component 1`] = `
<label id="provinceField"
       class="o-forms-field ncf__hidden"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option value="AB">
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province can apply class to hide the component 2`] = `
<label id="provinceField"
       class="o-forms-field ncf__hidden"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option value="AB">
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province can render a disabled select 1`] = `
<label id="provinceField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
            disabled
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option value="AB">
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province can render a disabled select 2`] = `
<label id="provinceField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
            disabled
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option value="AB">
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province can render an error message 1`] = `
<label id="provinceField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select o-forms-input--invalid">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option value="AB">
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province can render an error message 2`] = `
<label id="provinceField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select o-forms-input--invalid">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option value="AB">
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province can render an initial selected value 1`] = `
<label id="provinceField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option selected
              value="AB"
      >
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province can render an initial selected value 2`] = `
<label id="provinceField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option selected
              value="AB"
      >
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province render a select with a label 1`] = `
<label id="provinceField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option value="AB">
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;

exports[`Province render a select with a label 2`] = `
<label id="provinceField"
       class="o-forms-field"
       data-validate="required"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Province
    </span>
  </span>
  <span class="o-forms-input o-forms-input--select">
    <select id="province"
            aria-required="true"
            required
            name="province"
            data-trackable="field-province"
    >
      <option disabled
              value
      >
        Please select a province
      </option>
      <option value="AB">
        Alberta
      </option>
      <option value="BC">
        British Columbia
      </option>
      <option value="MB">
        Manitoba
      </option>
      <option value="NB">
        New Brunswick
      </option>
      <option value="NL">
        Newfoundland And Labrador
      </option>
      <option value="NT">
        Northwest Territories
      </option>
      <option value="NS">
        Nova Scotia
      </option>
      <option value="NU">
        Nunavut
      </option>
      <option value="ON">
        Ontario
      </option>
      <option value="PE">
        Prince Edward Island
      </option>
      <option value="QC">
        Quebec
      </option>
      <option value="SK">
        Saskatchewan
      </option>
      <option value="YT">
        Yukon Territory
      </option>
    </select>
    <span class="o-forms-input__error">
      Please select your province.
    </span>
  </span>
</label>
`;
